# hermes-memory-lancedb-pro

./: .gitignore  ACKNOWLEDGEMENTS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  configuration.md  hermes-integration.md  hooks.md  jmunch.md  usage.md
scripts/: memory_init.sh  memory_reset.sh  memory_smoke_test.py
skills/durable-task/: AGENTS.md  SKILL.md
skills/task-to-skill/: AGENTS.md  SKILL.md
src/hermes_memory_lancedb_pro/: __init__.py  _cli.py  _sql.py  admission_control.py  batch_dedup.py  decay.py  extraction_prompts.py  jmunch.py  llm_client.py  memory_categories.py  memory_compactor.py  plugin.yaml  provider.py  retriever.py  session_compressor.py  smart_extractor.py  smart_metadata.py  store.py  task_gc.py  task_ledger.py  task_skill.py  temporal_classifier.py
src/hermes_memory_lancedb_pro/reflection/: __init__.py  event_store.py  item_store.py  mapped_metadata.py  metadata.py  ranking.py  retry.py  slices.py  store.py
tests/: __init__.py  test_admission_control.py  test_auto_purge.py  test_batch_dedup.py  test_cli_admin.py  test_decay.py  test_extraction_prompts.py  test_fd_limit.py  test_helpers.py  test_jmunch.py  test_llm_client.py  test_memory_compactor.py  test_noise_and_mmr.py  test_pr4_improvements.py  test_provider.py  test_provider_feature_wiring.py  test_reranker_selection.py  test_session_compressor.py  test_session_integration.py  test_session_scoping.py  test_smart_extractor.py  test_smart_metadata.py  test_store_integration.py  test_task_gc.py  test_task_gc_provider.py  test_task_ledger.py  test_task_skill.py  test_temporal_classifier.py
tests/reflection/: test_event_store.py  test_item_store.py  test_mapped_metadata.py  test_metadata.py  test_ranking.py  test_retry.py  test_slices.py  test_store.py
